Fix overflows in the control panel.

--- a/user_css/main.css
+++ b/user_css/main.css
@@ -34,7 +34,8 @@ div#control_panel {
     top: 0px;
     background-color: rgb(220, 220, 220);
     padding: 5px 3px;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     white-space: nowrap;
 }
 div#playControls {
@@ -84,7 +85,7 @@ button#toggle {
     vertical-align: bottom;
     font-family: monospace;
     padding: 0;
-    height:101%;
+    height:100%;
     width: 13px;
     opacity:0.2;
     background-image: url('../user_images/arrow-left.png');
